added background linear color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="image-content"></div>
         </div>
 
-        <input type="file" style="margin: 15px" />
+        <input type="file" style="margin: 15px" class="image-input"/>
       </div>
 
       <div class="right-container">
