frontend submit image => exress server => sanic server , basic fetch function working

--- a/Express/public/index.html
+++ b/Express/public/index.html
@@ -15,7 +15,7 @@
             <div class="inner">Drag and Drop 
               <div>or Press to upload image</></div>
             </div>
-            <input type="file" style="margin: 15px" class="image-input" accept="image"/>
+            <input type="file" style="margin: 15px" class="image-input" accept="image/*"/>
         </div>
 
         <button type="button" class="submit">Upload</button>
