--- a/Express/public/index.html
+++ b/Express/public/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Import TensorFlow.js library -->
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js" type="text/javascript"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js" type="text/javascript"></script>
+
+  <script src="https://unpkg.com/@tensorflow/tfjs"></script>
+  <script src="https://unpkg.com/@tensorflow-models/mobilenet"> </script> -->
 
 
   <link rel="stylesheet" type="text/css" href="/index.css" />
@@ -34,7 +37,7 @@
         <button type="button" class="submit">Upload</button>
 
         <div class="camera-display-block" style="display:none">
-          <div class="inner">Camera Zone</div>
+
         </div>
 
       </div>
@@ -57,7 +60,12 @@
 
   </div>
 </body>
+
+<!-- Import TensorFlow.js library -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js" type="text/javascript"></script>
+
 <script src="/socket.io/socket.io.js"></script>
+<!-- <script type="module" src="/tensorflow.js"></script> -->
 <script src="/index.js"></script>
 
 </html>
